alignment fix
Former-commit-id: b35ad922b2fccc27e51454ae2e62dd19624a0496

--- a/ui/src/components/General/ColorPickerWithInput/ColorPickerWithInput.module.scss
+++ b/ui/src/components/General/ColorPickerWithInput/ColorPickerWithInput.module.scss
@@ -2,6 +2,9 @@
 	&__color {
 		position: relative;
 		display: inline-block;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 
 		&_dp {
 			position: absolute;
